--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@emailjs/browser": "^3.11.0",
     "@popperjs/core": "^2.11.8",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "emailjs-com": "^3.2.0",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
